Monday, 23rd June 2003, Al Riddoch <alriddoch@zepler.org>

	* Fix Makefile.ams so that distcheck works.

Friday 13th June, James Turner <james@worldforge.org>

	* Fix compilation of the typeService stuff, this once again
	  provides the danger in committing while in a hurry to play
	  games ;-)
	* Change the dependancy maps to key off of a TypeInfoPtr instead
	  of the string name.
	* Moved all the remaining TypeService methods out of TypeInfo.cpp
	  and into typeService.cpp where they belong

Monday, 9th June, James Turner <james@worldforge.org>

	* Fix a waring in Entity.h spotted by rsteinke
	* Rename TypeInfoEngine to TypeService, move
	  to seperate files, and re-factor TypeInfo code
	  to know much less about the TypeService's
	  internal state (which is now private)
	* Rename various Type system methods as suggested
	  by Al Riddoch to be more descriptive and useful

Friday, 30th May 2003, Ron Steinke <rsteinke@w-link.net>

	* Fixed a missed Interface -> UserInterface change
	  in Player.h.
	* Added a <cassert> #include in atlas_utils.h, so
	  the server test builds under g++ 3.3.

Sunday, 25th May 2004, James Turner <james@worldforge.org>

	* Start to migrate the test code away from CppUnit,
	  since ithe typeinfo magic it uses upsets GCC < 3.2
	  Instead, switch to some fairly basic internal
	  helpers, since we never did much with CppUnit
	  anyway.
	* Start adding TypeInfo support to the stub server
	  (using hard coded data, no dependancy on an
	  external source), so it be a bit more realistic.
	* Rewrote testPlayer to test more things, not use CppUnit,
	  and generally be smarter. Oh, and it uses StubServer,
	  since StubConnection is a bad idea and will be
	  going away shortly.

Tuesday, 13th May 2003, Ron Steinke <rsteinke@w-link.net>

	* More perl bindings memory management stuff,
	  primarily handling the World::Destroyed signal.
	* Used templates to simplify the perl typemap
	  stuff a bit, changed the #includes in the modules