@@ -4,6 +4,14 @@ lib_LTLIBRARIES = liberis-1.0.la
 
 liberis_1_0_la_LDFLAGS = -version-info @ERIS_VERSION_INFO@
 
+if HAVE_ATLAS_JANUS
+ATLAS_JANUS_CPP = UIFactory.cpp
+ATLAS_JANUS_H = UIFactory.h
+else
+ATLAS_JANUS_CPP =
+ATLAS_JANUS_H =
+endif
+
 liberis_1_0_la_SOURCES = \
 	Entity.cpp \
 	World.cpp \
@@ -31,7 +39,8 @@ liberis_1_0_la_SOURCES = \
 	PollDefault.cpp \
 	Log.cpp \
 	Avatar.cpp \
-	typeService.cpp
+	typeService.cpp \
+	$(ATLAS_JANUS_CPP)
 
 liberisdir = $(includedir)/Eris-1.0/Eris
 
@@ -68,6 +77,7 @@ liberis_HEADERS = \
 	atlas_utils.h \
 	Log.h \
 	Avatar.h \
-	typeService.h
+	typeService.h \
+	$(ATLAS_JANUS_H)
 
 
